fix type issues

--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.0",
+    "@renproject/chains": "3.0.0-alpha.4",
+    "@renproject/chains-bitcoin": "3.0.0-alpha.4",
+    "@renproject/chains-ethereum": "3.0.0-alpha.4",
+    "@renproject/provider": "3.0.0-alpha.4",
+    "@renproject/ren": "3.0.0-alpha.4",
+    "@renproject/utils": "3.0.0-alpha.4",
+    "ethers": "^5.6.0",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-identicons": "^1.2.5",
+    "web3": "^1.7.1"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
