--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@metamask/detect-provider": "^1.2.0",
     "@mui/material": "^5.5.0",
     "@renproject/chains": "3.0.0-alpha.17",
     "@renproject/chains-bitcoin": "3.0.0-alpha.17",
